# smart-farming-openenv

./: Dockerfile  README.md  app.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py  environment.py  tasks.py
