[project]
name = "smart-farming-openenv"
version = "0.1.5"  # This new version number forces a fresh validation!
dependencies = [
    "openenv-core>=0.2.0",
    "openai",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["tasks"]
