[project]
name = "smart-farming-openenv"
version = "0.2.0"  # Changed from 0.1.5 to force the validator to update
dependencies = [
    "openenv-core>=0.2.0",
    "openai",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["tasks"]
